cmake_minimum_required(VERSION 3.12)
project(A2_COMP2150)

set(CMAKE_CXX_STANDARD 14)

add_executable(A2_COMP2150 Queue.cpp Node.cpp Data.cpp Staff.cpp Admissions.cpp BloodLab.cpp Station.cpp Hospital.cpp Patient.cpp Event.cpp Treatment.cpp XRay.cpp Arrival.cpp StartAssesment.cpp CompleteAssesment.cpp StartXray.cpp CompleteXray.cpp StartBloodWork.cpp CompleteBloodWork.cpp StartTreatment.cpp Hospital.cpp Admissions.h Arrival.h BloodLab.h CompleteAssesment.h CompleteBloodWork.h CompleteXray.h Data.h Event.h Hospital.h Node.h Patient.h Queue.h Staff.h StartAssesment.h StartBloodWork.h StartTreatment.h StartXray.h Station.h Treatment.h XRay.h Discharge.cpp Discharge.h A2Const.cpp A2main.cpp A2Const.hpp)